# SpaceTitanic

./: .gitignore  gbc_gs.csv  linsvc_gs.csv  pyproject.toml  rf_gs.csv  spaceship-titanic-with-scikit-learn.ipynb  spaceship-titanic-with-tfdf.ipynb  xgbc_gs.csv
