[tool.poetry]
name = "spacetitanic"
version = "0.1.0"
description = "Spaceship Titanic Kaggle competition project"
authors = ["Dmytro-Tarasenko <ug.dotenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
